--- a/interface_mobile_01/home.kv
+++ b/interface_mobile_01/home.kv
@@ -1,146 +1,136 @@
 #:import MDCard kivymd.uix.card.MDCard
+#:import NoTransition kivy.uix.screenmanager.NoTransition
+
+<PlotWidgetPie>
+<PlotWidgetBar>
 <HomeApp>:
     md_bg_color: app.theme_cls.primary_color
     MDBoxLayout:
-        orientation:'vertical'
+        orientation:'vertical'  
         MDTopAppBar:
             elevation:0
-            title: ""
-            left_action_items: [["menu", lambda x: draw.set_state()]]
-
-
-        MDBoxLayout:
-            size_hint_y:.25
-            padding:dp(25)
-            MDBoxLayout:
-                orientation:"vertical"
-                MDLabel:
-                    text:"Gestão Pessoal"
-                    font_style:"H4"
+            pos_hint: {'center_x': 0.5}
+            left_action_items: [["menu"]]
+            right_action_items: [["dots-vertical"], ["clock"]]
 
         MDGridLayout:
+            md_bg_color: app.theme_cls.primary_color
             size_hint_y:.75
             cols:2
-            padding:[dp(15),dp(15),dp(15),dp(35)]
-            spacing:dp(15)
-            ElementCard:
-                image:"images/icons8-moedas-94.png"
-                text:"Visão Geral"      
+            # padding:[dp(15),dp(15),dp(15),dp(35)]
+            # spacing:dp(15)  
 
-            ElementCard:
-                image:"images/icons8-adicionar-94.png"
-                text:"Adicionar"
+            MDBoxLayout:
+                orientation:'vertical' 
+                ScreenManager:
+                    id: screen_nav
+                    transition: NoTransition()
+                    MDScreen:
+                        name: 'overview'
 
-            ElementCard:
-                image:"images/icons8-lupa-94.png"
-                text:"Buscar"
+                        ScrollView:
+                            do_scroll_x: False
+                            do_scroll_y: True
+                            
+                            MDBoxLayout:
+                                orientation: 'vertical'
+                                id: layout
+                                padding: 15
+                                spacing: 15
+                                size_hint: 1, None
+                                height: self.minimum_height
 
-            ElementCard:
-                image:"images/icons8-hoje-94.png"
-                text:"Calendário"
+                                MDLabel:
+                                    text: "Porcentagem da Receita gasta"
+                                    size_hint_y: None
+                                    height: self.texture_size[1]
+                                    halign: "center"
+                                    canvas.before:
+                                        Rectangle:
+                                            size: self.size
+                                            pos: self.pos
 
-            ElementCard:
-                image:"images/icons8-assistente-94.png"
-                text:"Suporte"
+                                MDProgressBar:
+                                    color: '#5679ad'
+                                    value:75
+                                    size_hint_y: None
+                                    height:35
+                                    halign: "center"
 
-            ElementCard:
-                image:"images/icons8-engrenagem-94.png"
-                text:"Configurações"
+                                PlotWidgetBar:
+                                    size_hint_y: None
+                                    height: 900
+                                    halign: "center"
+                                    canvas.before:
+                                        Rectangle:
+                                            size: self.size
+                                            pos: self.pos
 
+                                PlotWidgetPie:
+                                    size_hint_y: None
+                                    height: 900
+                                    halign: "center"
+                                    canvas.before:
+                                        Rectangle:
+                                            size: self.size
+                                            pos: self.pos
 
-    Widget:
-    MDNavigationDrawer:
-        id: draw
-        radius:0
-        orientation: "vertical"
-        padding: "15dp"
-        spacing: "6dp"
-        MDFloatLayout:
-            pos_hint: {'center_x':0.3, 'center_y':0.90}
-            size_hint: None, None
-            size: "150dp", "150dp"
-            canvas:
-                Color:
-                    rgb: (223/255, 237/255, 240/255, 0)
-                Ellipse:
-                    pos: self.pos
-                    size: self.size
-                    source: 'images/avatar.jpg'
-        MDLabel:
-            text: "Alucard"
-            font_style: "Button"
-            size_hint_y: None
-            height: self.texture_size[1]
-            pos_hint: {'center_x':0.6, 'center_y':0.90}
+                    MDScreen:
+                        name: 'add'
+                        MDLabel:
+                            text: 'Adicionar'
+                            pos_hint: {'center_y':.5}
+                            halign: 'center'
 
-        MDLabel:
-            text: "alucard@gmail.com"
-            font_style: "Caption"
-            size_hint_y: None
-            height: self.texture_size[1]
-            pos_hint: {'center_x':0.6, 'center_y':0.90}
+                    MDScreen:
+                        name: 'search'
+                        ScrollView:
+                            do_scroll_x: False
+                            do_scroll_y: True
 
-        ScrollView:
-            MDList:
-                OneLineAvatarListItem:
-                    on_press:
-                        draw.set_state("close")
-                    text: "Perfil"
-                    IconLeftWidget:
-                        icon: "account-circle-outline"
+                            Label:
+                                size_hint_y: None
+                                height: self.texture_size[1]
+                                text_size: self.width, None
+                                padding: 10, 10
+                                text:
+                                    'Procurando...\n' * 100
 
-                OneLineAvatarListItem:
-                    on_press:
-                        draw.set_state("close")
-                    text: "Suporte"
-                    IconLeftWidget:
+                    MDScreen:
+                        name: 'calendar'
+                        MDLabel:
+                            text: 'Suporte'
+                            pos_hint: {'center_y':.5}
+                            halign: 'center'
+                            
+
+                MDFloatLayout:
+                    md_bg_color: app.theme_cls.primary_dark
+                    pos_hint:{'center_x': .5}
+                    size_hint: .6, None
+                    size: "48dp", "48dp"
+                    orientation: 'horizontal'
+                    radius:16
+                    MDIconButton:
+                        icon: 'home-assistant'
+                        pos_hint: {'center_x': .1, 'center_y': .5}
+                        on_release: screen_nav.current = 'overview'
+                    MDIconButton:
+                        icon: 'layers-search'
+                        pos_hint: {'center_x': .2, 'center_y': .5}
+                        on_release: screen_nav.current = 'search'
+                    MDIconButton:
+                        icon: 'pen-plus'
+                        pos_hint: {'center_x': .3, 'center_y': .5}
+                        on_release: screen_nav.current = 'add'
+                    MDIconButton:
                         icon: 'face-agent'
-
-                OneLineAvatarListItem:
-                    on_press:
-                        draw.set_state("close")
-                    text:'Configurações'
-                    IconLeftWidget:
-                        icon: 'cog'    
-
-                OneLineAvatarListItem:
-                    on_press:
-                        draw.set_state("close")
-                    on_press:
-                        root.go_login()
-                    
-                    text: "Logout"
-                    IconLeftWidget:
+                        pos_hint: {'center_x': .7, 'center_y': .5}
+                        on_release: screen_nav.current = 'calendar'
+                    MDIconButton:
+                        icon: 'cog'
+                        pos_hint: {'center_x': .8, 'center_y': .5}
+                    MDIconButton:
                         icon: 'logout-variant'
-
-    Widget:
-
-
-
-<ElementCard@MDCard>:
-    md_bg_color:app.theme_cls.primary_dark
-    padding:dp(15)
-    spacing:dp(15)
-    radius:dp(25)
-    ripple_behavior: True
-    image:''
-    text:""
-    items_count:""
-    subtext:''
-
-    orientation:'vertical'
-    Image:
-        source:root.image
-    MDBoxLayout:
-        orientation:'vertical'
-        MDLabel:
-            halign:"center"
-            text:root.text
-            font_style:"H6"
-        MDLabel:
-            halign:"center"
-            font_style:"Caption"
-            text:root.subtext
-        MDLabel:
-            halign:"center"
-            text:root.items_count
+                        pos_hint: {'center_x': .9, 'center_y': .5}
+                        on_press: root.go_login()
